--- a/Fake Login/testpage.html
+++ b/Fake Login/testpage.html
@@ -18,6 +18,19 @@
 </head>
 <body>
 
+	
+	<header>
+		<nav class="nav wrapper cyan">
+		<div class="container">
+		
+			<a href="" class="brand-logo center">Log-in example</a>
+			<a href="" class="waves-effect waves-light btn-small" id="btn"><i class="material-icons left">exit_to_app</i>Sign-out</a>
+		
+		</div> 
+	</nav>
+	</header>
+	
+
     <div id = "landing" class = "container">
 		<h2>Login</h2>
 		<a href = "#modal-login" class = "btn orange modal-trigger">LOGIN</a>
